get status docs and modeling
